--- a/ch1/hint/templates/hint/laurentia.html
+++ b/ch1/hint/templates/hint/laurentia.html
@@ -9,6 +9,134 @@
                     {{ form.name }}
                     {{ form.enterKey }}
                     {{ form.hintCount }}
+
+                    {{ form.hint1 }}
+                    {{ form.hint2 }}
+                    {{ form.hint3 }}
+                    {{ form.hint4 }}
+                    {{ form.hint5 }}
+                    {{ form.hint6 }}
+                    {{ form.hint7 }}
+                    {{ form.hint8 }}
+                    {{ form.hint9 }}
+                    {{ form.hint10 }}
+                    {{ form.hint11 }}
+                    {{ form.hint12 }}
+                    {{ form.hint13 }}
+                    {{ form.hint14 }}
+                    {{ form.hint15 }}
+                    {{ form.hint16 }}
+                    {{ form.hint17 }}
+                    {{ form.hint18 }}
+                    {{ form.hint19 }}
+                    {{ form.hint20 }}
+                    {{ form.hint21 }}
+                    {{ form.hint22 }}
+                    {{ form.hint23 }}
+                    {{ form.hint24 }}
+                    {{ form.hint25 }}
+                    {{ form.hint26 }}
+                    {{ form.hint27 }}
+                    {{ form.hint28 }}
+                    {{ form.hint29 }}
+                    {{ form.hint30 }}
+
+                    {{ form.sub_hint1 }}
+                    {{ form.sub_hint2 }}
+                    {{ form.sub_hint3 }}
+                    {{ form.sub_hint4 }}
+                    {{ form.sub_hint5 }}
+                    {{ form.sub_hint6 }}
+                    {{ form.sub_hint7 }}
+                    {{ form.sub_hint8 }}
+                    {{ form.sub_hint9 }}
+                    {{ form.sub_hint10 }}
+                    {{ form.sub_hint11 }}
+                    {{ form.sub_hint12 }}
+                    {{ form.sub_hint13 }}
+                    {{ form.sub_hint14 }}
+                    {{ form.sub_hint15 }}
+                    {{ form.sub_hint16 }}
+                    {{ form.sub_hint17 }}
+                    {{ form.sub_hint18 }}
+                    {{ form.sub_hint19 }}
+                    {{ form.sub_hint20 }}
+                    {{ form.sub_hint21 }}
+                    {{ form.sub_hint22 }}
+                    {{ form.sub_hint23 }}
+                    {{ form.sub_hint24 }}
+                    {{ form.sub_hint25 }}
+                    {{ form.sub_hint26 }}
+                    {{ form.sub_hint27 }}
+                    {{ form.sub_hint28 }}
+                    {{ form.sub_hint29 }}
+                    {{ form.sub_hint30 }}
+
+                    {{ form.textHint1 }}
+                    {{ form.textHint2 }}
+                    {{ form.textHint3 }}
+                    {{ form.textHint4 }}
+                    {{ form.textHint5 }}
+                    {{ form.textHint6 }}
+                    {{ form.textHint7 }}
+                    {{ form.textHint8 }}
+                    {{ form.textHint9 }}
+                    {{ form.textHint10 }}
+                    {{ form.textHint11 }}
+                    {{ form.textHint12 }}
+                    {{ form.textHint13 }}
+                    {{ form.textHint14 }}
+                    {{ form.textHint15 }}
+                    {{ form.textHint16 }}
+                    {{ form.textHint17 }}
+                    {{ form.textHint18 }}
+                    {{ form.textHint19 }}
+                    {{ form.textHint20 }}
+                    {{ form.textHint21 }}
+                    {{ form.textHint22 }}
+                    {{ form.textHint23 }}
+                    {{ form.textHint24 }}
+                    {{ form.textHint25 }}
+                    {{ form.textHint26 }}
+                    {{ form.textHint27 }}
+                    {{ form.textHint28 }}
+                    {{ form.textHint29 }}
+                    {{ form.textHint30 }}
+
+                    {{ form.sub_textHint1 }}
+                    {{ form.sub_textHint2 }}
+                    {{ form.sub_textHint3 }}
+                    {{ form.sub_textHint4 }}
+                    {{ form.sub_textHint5 }}
+                    {{ form.sub_textHint6 }}
+                    {{ form.sub_textHint7 }}
+                    {{ form.sub_textHint8 }}
+                    {{ form.sub_textHint9 }}
+                    {{ form.sub_textHint10 }}
+                    {{ form.sub_textHint11 }}
+                    {{ form.sub_textHint12 }}
+                    {{ form.sub_textHint13 }}
+                    {{ form.sub_textHint14 }}
+                    {{ form.sub_textHint15 }}
+                    {{ form.sub_textHint16 }}
+                    {{ form.sub_textHint17 }}
+                    {{ form.sub_textHint18 }}
+                    {{ form.sub_textHint19 }}
+                    {{ form.sub_textHint20 }}
+                    {{ form.sub_textHint21 }}
+                    {{ form.sub_textHint22 }}
+                    {{ form.sub_textHint23 }}
+                    {{ form.sub_textHint24 }}
+                    {{ form.sub_textHint25 }}
+                    {{ form.sub_textHint26 }}
+                    {{ form.sub_textHint27 }}
+                    {{ form.sub_textHint28 }}
+                    {{ form.sub_textHint29 }}
+                    {{ form.sub_textHint30 }}
+
+
+
+
                 </div>
                 <div class="row mt-4">
                     <div class="col-6">
