--- a/ch1/hint/templates/hint/theme_edit.html
+++ b/ch1/hint/templates/hint/theme_edit.html
@@ -2240,6 +2240,161 @@
             </script>
             <div class="col-1"></div>
         </div>
+        <div style="display:none;">
+            {{ form.hint31 }}
+            {{ form.hint32 }}
+            {{ form.hint33 }}
+            {{ form.hint34 }}
+            {{ form.hint35 }}
+            {{ form.hint36 }}
+            {{ form.hint37 }}
+            {{ form.hint38 }}
+            {{ form.hint39 }}
+            {{ form.hint40 }}
+            {{ form.hint41 }}
+            {{ form.hint42 }}
+            {{ form.hint43 }}
+            {{ form.hint44 }}
+            {{ form.hint45 }}
+            {{ form.hint46 }}
+            {{ form.hint47 }}
+            {{ form.hint48 }}
+            {{ form.hint49 }}
+            {{ form.hint50 }}
+            {{ form.hint51 }}
+            {{ form.hint52 }}
+            {{ form.hint53 }}
+            {{ form.hint54 }}
+            {{ form.hint55 }}
+            {{ form.hint56 }}
+            {{ form.hint57 }}
+            {{ form.hint58 }}
+            {{ form.hint59 }}
+            {{ form.hint60 }}
+            {{ form.hint61 }}
+            {{ form.hint62 }}
+            {{ form.hint63 }}
+            {{ form.hint64 }}
+            {{ form.hint65 }}
+            {{ form.hint66 }}
+            {{ form.hint67 }}
+            {{ form.hint68 }}
+            {{ form.hint69 }}
+            {{ form.hint70 }}
+            {{ form.hint71 }}
+            {{ form.hint72 }}
+            {{ form.hint73 }}
+            {{ form.hint74 }}
+            {{ form.hint75 }}
+            {{ form.hint76 }}
+            {{ form.hint77 }}
+            {{ form.hint78 }}
+            {{ form.hint79 }}
+            {{ form.hint80 }}
+
+            {{ form.textHint31 }}
+            {{ form.textHint32 }}
+            {{ form.textHint33 }}
+            {{ form.textHint34 }}
+            {{ form.textHint35 }}
+            {{ form.textHint36 }}
+            {{ form.textHint37 }}
+            {{ form.textHint38 }}
+            {{ form.textHint39 }}
+            {{ form.textHint40 }}
+            {{ form.textHint41 }}
+            {{ form.textHint42 }}
+            {{ form.textHint43 }}
+            {{ form.textHint44 }}
+            {{ form.textHint45 }}
+            {{ form.textHint46 }}
+            {{ form.textHint47 }}
+            {{ form.textHint48 }}
+            {{ form.textHint49 }}
+            {{ form.textHint50 }}
+            {{ form.textHint51 }}
+            {{ form.textHint52 }}
+            {{ form.textHint53 }}
+            {{ form.textHint54 }}
+            {{ form.textHint55 }}
+            {{ form.textHint56 }}
+            {{ form.textHint57 }}
+            {{ form.textHint58 }}
+            {{ form.textHint59 }}
+            {{ form.textHint60 }}
+            {{ form.textHint61 }}
+            {{ form.textHint62 }}
+            {{ form.textHint63 }}
+            {{ form.textHint64 }}
+            {{ form.textHint65 }}
+            {{ form.textHint66 }}
+            {{ form.textHint67 }}
+            {{ form.textHint68 }}
+            {{ form.textHint69 }}
+            {{ form.textHint70 }}
+            {{ form.textHint71 }}
+            {{ form.textHint72 }}
+            {{ form.textHint73 }}
+            {{ form.textHint74 }}
+            {{ form.textHint75 }}
+            {{ form.textHint76 }}
+            {{ form.textHint77 }}
+            {{ form.textHint78 }}
+            {{ form.textHint79 }}
+            {{ form.textHint80 }}
+
+
+            {{ form.sub_textHint31 }}
+            {{ form.sub_textHint32 }}
+            {{ form.sub_textHint33 }}
+            {{ form.sub_textHint34 }}
+            {{ form.sub_textHint35 }}
+            {{ form.sub_textHint36 }}
+            {{ form.sub_textHint37 }}
+            {{ form.sub_textHint38 }}
+            {{ form.sub_textHint39 }}
+            {{ form.sub_textHint40 }}
+            {{ form.sub_textHint41 }}
+            {{ form.sub_textHint42 }}
+            {{ form.sub_textHint43 }}
+            {{ form.sub_textHint44 }}
+            {{ form.sub_textHint45 }}
+            {{ form.sub_textHint46 }}
+            {{ form.sub_textHint47 }}
+            {{ form.sub_textHint48 }}
+            {{ form.sub_textHint49 }}
+            {{ form.sub_textHint50 }}
+            {{ form.sub_textHint51 }}
+            {{ form.sub_textHint52 }}
+            {{ form.sub_textHint53 }}
+            {{ form.sub_textHint54 }}
+            {{ form.sub_textHint55 }}
+            {{ form.sub_textHint56 }}
+            {{ form.sub_textHint57 }}
+            {{ form.sub_textHint58 }}
+            {{ form.sub_textHint59 }}
+            {{ form.sub_textHint60 }}
+            {{ form.sub_textHint61 }}
+            {{ form.sub_textHint62 }}
+            {{ form.sub_textHint63 }}
+            {{ form.sub_textHint64 }}
+            {{ form.sub_textHint65 }}
+            {{ form.sub_textHint66 }}
+            {{ form.sub_textHint67 }}
+            {{ form.sub_textHint68 }}
+            {{ form.sub_textHint69 }}
+            {{ form.sub_textHint70 }}
+            {{ form.sub_textHint71 }}
+            {{ form.sub_textHint72 }}
+            {{ form.sub_textHint73 }}
+            {{ form.sub_textHint74 }}
+            {{ form.sub_textHint75 }}
+            {{ form.sub_textHint76 }}
+            {{ form.sub_textHint77 }}
+            {{ form.sub_textHint78 }}
+            {{ form.sub_textHint79 }}
+            {{ form.sub_textHint80 }}
+        </div>
 
         <div class="row p-5 mx-5">
             <div class="col-3"></div>
@@ -2249,6 +2404,7 @@
             <div class="col-3"></div>
         </div>
     </form>
+
 </div>
 <script>
     function checkSize(input) {
