--- a/ch1/hint/templates/hint/laurentia_complete.html
+++ b/ch1/hint/templates/hint/laurentia_complete.html
@@ -3,7 +3,7 @@
 
 <div class="container mt-5">
     <div class="text-center m-5">
-        <h1 class="mt-5 text-center">로렌시아 힌트 수정 완료되었습니다.</h1>
+        <h1 class="mt-5 text-center" style="color:white">로렌시아 힌트 수정 완료되었습니다.</h1>
     </div>
 </div>
 
