--- a/ch1/hint/templates/hint/hint_code.html
+++ b/ch1/hint/templates/hint/hint_code.html
@@ -164,7 +164,7 @@
         hintCode.p.value = "7";
         return true;
       }
-      else if(hintCode.p.value == "CB88" || hintCode.p.value == "ca88" || hintCode.p.value == "Ca88") {
+      else if(hintCode.p.value == "CB88" || hintCode.p.value == "cb88" || hintCode.p.value == "Cb88") {
         hintCode.p.value = "8";
         return true;
       }
@@ -224,7 +224,7 @@
         hintCode.p.value = "22";
         return true;
       }
-      else if(hintCode.p.value == "DC14" || hintCode.p.value == "dc14" || hintCode.p.value == "Dc14") {
+      else if(hintCode.p.value == "DC01" || hintCode.p.value == "dc01" || hintCode.p.value == "Dc01") {
         hintCode.p.value = "23";
         return true;
       }
@@ -300,7 +300,7 @@
         hintCode.p.value = "41";
         return true;
       }
-      else if(hintCode.p.value == "EB31" || hintCode.p.value == "eb31" || hintCode.p.value == "eb31") {
+      else if(hintCode.p.value == "EB31" || hintCode.p.value == "eb31" || hintCode.p.value == "Eb31") {
         hintCode.p.value = "42";
         return true;
       }
