--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -23,7 +23,11 @@
                 </div>
                 {% if sub_textHint %}
                     <div class="text-center mb-3">
+                        {% if answer %}
                         <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">정답보기</button>
+                        {% else %}
+                        <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">구체적인 힌트</button>
+                        {% endif %}
                     </div>
                     <div id="sub_text1" style="display:none">
                         {{ sub_textHint|safe }}
@@ -45,7 +49,11 @@
                 </div>
                 {% if sub_textHint %}
                     <div class="text-center mb-3">
-                        <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">정답보기</button>
+                        {% if answer %}
+                            <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">정답보기</button>
+                        {% else %}
+                            <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">구체적인 힌트</button>
+                        {% endif %}
                     </div>
                     <div id="sub_text1" style="display:none">
                         {{ sub_textHint|safe }}
@@ -65,7 +73,11 @@
             </div>
             {% if sub_textHint %}
                 <div class="text-center mb-3">
-                    <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">정답보기</button>
+                    {% if answer %}
+                        <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">정답보기</button>
+                    {% else %}
+                        <button onclick="sub_text1_btn()" style="color:white; border:1px solid white; background-color:black" class="text-center">구체적인 힌트</button>
+                    {% endif %}
                 </div>
                 <div id="sub_text1" style="display:none">
                     {{ sub_textHint|safe }}
