--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -105,5 +105,21 @@
         var referrer =  document.referrer;
         location.href=referrer;
     }
+    var start = localStorage.getItem('start');
+    var SetTime = localStorage.getItem('test');		// 최초 설정 시간(기본 : 초)
+    function msg_time() {	// 1초씩 카운트
+        SetTime--;					// 1초씩 감소
+        localStorage.test = SetTime;
+        if (SetTime < 0) {			// 시간이 종료 되었으면..
+            clearInterval(tid);		// 타이머 해제
+            start = false;
+        }
+    }
+
+	if (start) {
+        window.onload = function TimerStart(){
+            tid=setInterval('msg_time()',1000)
+        };
+    }
 </script>
 {% endblock %}
