--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -105,6 +105,7 @@
         var referrer =  document.referrer;
         location.href=referrer;
     }
+    {% if okTimer %}
     var start = localStorage.getItem('start');
     var SetTime = localStorage.getItem('test');		// 최초 설정 시간(기본 : 초)
     function msg_time() {	// 1초씩 카운트
@@ -121,5 +122,6 @@
             tid=setInterval('msg_time()',1000)
         };
     }
+    {% endif %}
 </script>
 {% endblock %}
